# decompose-sales-penetration

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  FAILURES.md  HANDOFF.md  PLAN.md  README.md  fly.toml  pyproject.toml  wsgi.py
.claude/: launch.json
app/: CLAUDE.md  __init__.py  app.py  charts.py  components.py  constants.py  decomposition.py  filters.py  layout.py  panel_data.py
app/views/: __init__.py  detail.py  penetration.py  which_lever.py
assets/: style.css
docs/: SPEC.md
docs/brainstorms/: decompose-build-brainstorm.md  decompose-fable-brief.md
docs/launch/: blog-draft.md  work-card.md
docs/solutions/architecture-patterns/: in-process-seed-locked-data-no-db-2026-07-06.md
docs/solutions/tooling-decisions/: fly-cloudflare-custom-domain-2026-07-06.md
docs/solutions/ui-bugs/: dash-ag-grid-hidden-tab-column-sizing-2026-07-06.md
tests/: CLAUDE.md  test_charts.py  test_decomposition.py  test_layout.py  test_panel_data.py  test_views.py
