[project]
name = "decompose-sales-penetration"
version = "0.1.0"
description = "Decompose — household penetration decomposition (Cinderhaven sales-penetration tool #3)"
requires-python = ">=3.11"
# Slice 2 deps (pure decomposition math). Slice 3 adds the Spin Rate app stack:
# dash, plotly, dash-ag-grid, gunicorn, python-dotenv, psycopg2-binary, lailara-palette.
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "cinderhaven-household-panel>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
