[project]
name = "decompose-sales-penetration"
version = "0.1.0"
description = "Decompose — household penetration decomposition (Cinderhaven sales-penetration tool #3)"
requires-python = ">=3.11"
# Full app stack (Slice 3). Data is in-process: the app imports the seed-locked
# cinderhaven-household-panel package and caches the panel to disk — no psycopg2,
# no DATABASE_URL, no Postgres at request time. See CLAUDE.md / docs/SPEC.md.
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=15.0",              # parquet disk-cache for the generated panel
    "cinderhaven-household-panel>=0.1.0",
    "lailara-palette>=2.1.0",     # vendored design tokens (packages/lailara-palette)
    "dash>=3.0",
    "plotly>=6.0",
    "dash-ag-grid>=31.0",
    "gunicorn>=21.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
